--- a/todo-ssr/.vscode/launch.json
+++ b/todo-ssr/.vscode/launch.json
@@ -14,6 +14,9 @@
             "args": [
                 "dev"
             ],
+            "env": {
+                "NODE_OPTIONS": "--inspect"
+            },
             "program": "${workspaceFolder}/node_modules/.bin/next"
         }
     ]
